repos/makepy/contents/test/fail/ImportRecursive2.rules
import . file ImportRecursive1.rules

b:
